Fix spacing in css and html

--- a/css/main.css
+++ b/css/main.css
@@ -347,56 +347,58 @@ footer p {
 
 }
 
-  @media only screen and (min-width: 38em) {
+@media only screen and (min-width: 38em) {
 
-html {
-  font-size: 130%;
-}
+  html {
+    font-size: 130%;
+  }
 
 
-nav ul {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  justify-content: space-around;
-}
+  nav ul {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-around;
+  }
 
-nav li {
-  display: flex;
-  flex-direction: row;
-}
+  nav li {
+    display: flex;
+    flex-direction: row;
+  }
 
-.favs li {
-  width: 100%;
-  display: flex;
-  margin-bottom: 1em;
-}
+  .favs li {
+    width: 100%;
+    display: flex;
+    margin-bottom: 1em;
+  }
 
-.favs img {
-  width: 20%;
-  margin-right: 1rem;
-}
+  .favs img {
+    width: 20%;
+    margin-right: 1rem;
+  }
 
-.favs p {
-  margin: auto;
-}
+  .favs p {
+    margin: auto;
+  }
 
-.holiday {
-  display: flex;
-  flex-direction: row;
-}
+  .holiday {
+    display: flex;
+    flex-direction: row;
+  }
 
-.special, .newyear {
-  width: 50%;
-}
+  .special, .newyear {
+    width: 50%;
+  }
 
-.creators {
-  display: flex;
-  flex-direction: row;
-}
+  .creators {
+    display: flex;
+    flex-direction: row;
+  }
 
-.creators div {
-  width: 50%;
+  .creators div {
+    width: 50%;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -410,8 +412,6 @@ nav li {
     flex-direction: row;
     text-align: left;
   }
-
-
 
 }
 
